Termino do primeiro conteudo

--- a/bloco_5/dia_1/conteudo/conteudo.html
+++ b/bloco_5/dia_1/conteudo/conteudo.html
@@ -9,6 +9,9 @@
     <script>
       const paragraph = document.getElementById("paragraph");
       paragraph.style.color = "red";
+      document.getElementById("page-title").innerText  =  "Aprendendo o bloco";
+      document.getElementById("second-paragraph").style.color = "red";
+      document.getElementById("subtitle").style.backgroundColor = "blue";
     </script>
   </body>
 </html>
