--- a/bloco_5/dia_1/conteudo/conteudo.html
+++ b/bloco_5/dia_1/conteudo/conteudo.html
@@ -2,9 +2,9 @@
 <html>
   <body>
     <h2 id="page-title">Título</h2>
-    <p id="paragraph">Dê uma cor para este parágrafo!</p>
+    <p class = "paragrafo" id="paragraph">Dê uma cor para este parágrafo!</p>
     <h4 id="subtitle">Subtítulo</h4>
-    <p id="second-paragraph">Segundo parágrafo!</p>
+    <p class = "paragrafo" id="second-paragraph">Segundo parágrafo!</p>
 
     <script>
       const paragraph = document.getElementById("paragraph");
@@ -12,6 +12,8 @@
       document.getElementById("page-title").innerText  =  "Aprendendo o bloco";
       document.getElementById("second-paragraph").style.color = "red";
       document.getElementById("subtitle").style.backgroundColor = "blue";
+      document.getElementsByClassName("paragrafo")[0].innerHTML = "Cor é muito bonita";
+      document.getElementsByTagName("h2")[0].style.color = "rgb(0,0,0)";
     </script>
   </body>
 </html>
