--- a/bloco_5/dia_2/conteudo/buscandoElementos.html
+++ b/bloco_5/dia_2/conteudo/buscandoElementos.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Buscando Elementos</title>
 </head>
 <body>
     <div id="paiDoPai">
@@ -20,7 +20,7 @@
         </div>
       </div>
 <script>
-    
-</script>
+document.querySelector("elementoOndeVoceEsta").parentNode;
+document.getElementById("boby").style.backgroundColor = "red";
 </body>
 </html>
