Inserirou o email e senha - primeiro exercicio

--- a/bloco_6/dia_1/conteudo/index.html
+++ b/bloco_6/dia_1/conteudo/index.html
@@ -5,6 +5,12 @@
   <title>Html & CSS - parte II</title>
 </head>
 <body>
-  
+  <h1>PARTE II - input tag, types e atributos</h1>
+  <form action="" method="GET" enctype="multipart/form-data">
+  <label for="email">E-mail:</label>
+  <input type="email" id="email" name="email">
+  <label for="senha">Senha:</label>
+  <input type="password" id="senha" name="senha">
+  </form>
 </body>
 </html>
