Inserirou lista de tarefas com checkbox

--- a/bloco_6/dia_1/conteudo/index.html
+++ b/bloco_6/dia_1/conteudo/index.html
@@ -11,6 +11,13 @@
   <input type="email" id="email" name="email">
   <label for="senha">Senha:</label>
   <input type="password" id="senha" name="senha">
+  <br>
+  <br>
+  <h4>Realizar Tarefas</h4>
+  <input type="checkbox" id="checkbox-1" name="lembrede">Fazer todos os exercicios
+  <input type="checkbox" id="checkbox-2" name="lembrede">Fazer projetos
+  <br>
+  <br>
   </form>
 </body>
 </html>
