--- a/bloco_6/dia_1/conteudo/index.html
+++ b/bloco_6/dia_1/conteudo/index.html
@@ -8,9 +8,9 @@
   <h1>PARTE II - input tag, types e atributos</h1>
   <form action="" method="GET" enctype="multipart/form-data">
   <label for="email">E-mail:</label>
-  <input type="email" id="email" name="email">
+  <input type="email" id="email" placeholder="Digite seu email" name="email" autocomplete="off" autofocus required>
   <label for="senha">Senha:</label>
-  <input type="password" id="senha" name="senha">
+  <input type="password" id="senha" placeholder="Digite sua senha" name="senha" required>
   <br>
   <br>
   <h4>Realizar Tarefas</h4>
@@ -18,6 +18,7 @@
   <input type="checkbox" id="checkbox-2" name="lembrede">Fazer projetos
   <br>
   <br>
+  <button id="enviarInformação">Enviar</button>
   </form>
 </body>
 </html>
