--- a/bloco_6/dia_2/exercises/html-e-css-forms-flexbox-e-responsivo_2/index.html
+++ b/bloco_6/dia_2/exercises/html-e-css-forms-flexbox-e-responsivo_2/index.html
@@ -3,11 +3,83 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- CSS only -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+  <link href="styles.css" rel="stylesheet">
+  <link rel="stylesheet" href="dist/css/DatePickerX.min.css">
   <title>Formulario estilizado</title>
 </head>
 <body>
-  <header>
-    <h1>Formulario</h1>
+  <header class="container">
+    <h1 class="text-center fs-1">CURRICULUM VITAE</h1>
+    <p class="text-center fw-lighter">Realize seu Formulario para cadastro</p>
   </header>
+  <form action="" method="GET" enctype="multipart/form-data">
+    <div class="container mb-3">
+      <label for="nome-completo" class="form-label">Nome Completo:</label>
+      <input type="text" class="form-control" id="nome-completo" name="nome-completo" autocomplete="off"> 
+      <label for="email" class="form-label">Email:</label>
+      <input type="email" id="email" class="form-control" name="email" maxlength="50" size="55" autocomplete="off" autofocus required>
+      <label for="cpf" class="form-label">CPF:</label>
+      <input type="text" id="cpf" class="form-control" name="cpf" maxlength="11" size="15" autocomplete="off" required>
+      <label for="endereco" class="form-label">Endereço:</label>
+      <input type="text" id="endereco" class="form-control" name="endereco" maxlength="200" size="100" autocomplete="off" required>
+      <label for="cidade" class="form-label">Cidade:</label>
+      <input type="text" id="cidade" class="form-control" name="cidade" maxlength="28" autocomplete="off" required>
+      <div class="container input-group mb-3">
+        <label for="input-estado" class="input-group-text">Estado:</label>
+        <select name="estado"id="input-estado" class="form-select">
+      
+        </select>
+      </div>
+      <div class="form-check">
+        <p  class="form-label">Selecionar o tipo:</p>
+        <input class="form-check-input" type="radio" id="casa" name="tipo" value="casa">
+        <label class="form-check-label" for="casa">Casa</label>
+      </div>
+      <div class="form-check">
+        <input class="form-check-input" type="radio" id="Apartamento" name="tipo" value="Apartamento">
+        <label class="form-check-label" for="Apartamento">Apartamento</label>
+      </div>
+    </div> 
+    <div class="container">
+      <h6 class="text-center fw-lighter">Emprego</h6>
+      <div class="mb-3">
+        <label for=texto class="form-label">Resumo do currículo</label>
+        <textarea id="texto" class="form-control" name="resumo" rows="4" cols="50" required>
+        </textarea>
+      </div>
+      <div  class="mb-3">
+        <label for="cargo" class="form-label">Cargo:</label>
+        <input type="text" class="form-control" id="cargo" name="cargo" maxlength="200" size="100" required>  
+      </div>
+      <div>
+        <label for="data-1"class="form-label">Data de inicio:</label>
+        <input type="text" class="form-control" id="data-1" name="data-inicial">
+        <label for="data-2" class="form-label">Data Final:</label>
+        <input type="text" class="form-control"id="data-2" name="data-final">
+      </div>
+      <div>
+        <button type="submit">Enviar</button>
+        <button type="submit">Resetar</button>
+      </div>
+    </div>
+    <div class="container">
+        <h5>Confirmação dos dados</h5>
+        <div>
+
+        </div>
+        <div>
+          <button type="submit">Confirma</button>
+          <button type="submit">Apagar</button>
+        </div>
+    </div>
+  </form>
+  <!-- JavaScript Bundle with Popper -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
+<script src="script.js"></script>
+<script src="dist/js/DatePickerX.min.js"></script>
+
+
 </body>
 </html>
