--- a/bloco_5/dia_1/conteudo/seletor/conteudo-1.html
+++ b/bloco_5/dia_1/conteudo/seletor/conteudo-1.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link src= "style.css" rel="stylesheet" href="style.css">
+    <link href="seletor/style.css" rel="stylesheet">
     <title>Administrador do Tempo</title>
   </head>
-  <body id="container">
+    <body id="container">
     <header id="header-container">
       <h1>Administrador do Tempo da Trybe</h1>
     </header>
@@ -32,6 +32,5 @@
     <footer id="footer-container">
       <div>&copy; Trybe</div>
     </footer>
-    <script src="script.js"></script>
   </body>
 </html>
