--- a/bloco_5/dia_2/conteudo/buscandoElementos.html
+++ b/bloco_5/dia_2/conteudo/buscandoElementos.html
@@ -20,7 +20,7 @@
         </div>
       </div>
 <script>
-document.querySelector("elementoOndeVoceEsta").parentNode;
-document.getElementById("boby").style.backgroundColor = "red";
+  
+</script>
 </body>
 </html>
