Terminou os testes primeiros testes do conteudo: flex direçao wrap e flow

--- a/bloco_6/dia_3_e_4/part_1/conteudo.html
+++ b/bloco_6/dia_3_e_4/part_1/conteudo.html
@@ -20,6 +20,9 @@
         background-color: #0fa36b;
         display: flex;
         /* ADICIONE AQUI SEUS TESTES */
+        flex-direction: row;
+        flex-wrap: wrap;
+        flex-flow:wrap-reverse
       }
 
       /*Teste as possibilidades ( row , column , row-reverse e column-reverse ) para a propriedade flex-direction .
