--- a/bloco_6/dia_3_e_4/part_1/conteudo2.html
+++ b/bloco_6/dia_3_e_4/part_1/conteudo2.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Flexbox - Flex Flow</title>
+    <title>Flexbox - Justify Content</title>
     <style>
       .box {
         color: #9069EF;
@@ -13,21 +13,16 @@
         height: 60px;
         margin: 10px 5px;
         text-align: center;
-        width: 30%;
+        width: 20%;
       }
 
       .box-container {
         background-color: #0fa36b;
         display: flex;
         /* ADICIONE AQUI SEUS TESTES */
-        flex-direction: row;
-        flex-wrap: wrap;
-        flex-flow: wrap-reverse;
       }
 
-      /*Teste as possibilidades ( row , column , row-reverse e column-reverse ) para a propriedade flex-direction .
-Teste as possibilidades ( wrap e nowrap ) para a propriedade flex-wrap .
-Teste as possibilidades para a propriedade flex-flow .*/
+      /*Utilizando o código abaixo, teste as possibilidades ( center , flex-start , flex-end , space-around e space-between ) para a propriedade justify-content .*/
     </style>
 
   </head>
@@ -36,8 +31,6 @@ Teste as possibilidades para a propriedade flex-flow .*/
       <div class="box">1</div>
       <div class="box">2</div>
       <div class="box">3</div>
-      <div class="box">4</div>
-      <div class="box">5</div>
     </div>
   </body>
 </html>
