Terminou os testes com justify-content

--- a/bloco_6/dia_3_e_4/part_1/conteudo2.html
+++ b/bloco_6/dia_3_e_4/part_1/conteudo2.html
@@ -20,6 +20,7 @@
         background-color: #0fa36b;
         display: flex;
         /* ADICIONE AQUI SEUS TESTES */
+        justify-content: space-between
       }
 
       /*Utilizando o código abaixo, teste as possibilidades ( center , flex-start , flex-end , space-around e space-between ) para a propriedade justify-content .*/
