terminou os testes com align-items

--- a/bloco_6/dia_3_e_4/part_1/conteudo3.html
+++ b/bloco_6/dia_3_e_4/part_1/conteudo3.html
@@ -42,7 +42,7 @@
         background-color: #0fa36b;
         display: flex;
         /* ADICIONE AQUI SEUS TESTES */
-        align-items: ;
+        align-items: baseline ;
       }
 
       /*Teste as possibilidades ( center , flex-start , flex-end , stretch e baseline ) para a propriedade align-items . */
