--- a/bloco_6/dia_5/conteudo/index.html
+++ b/bloco_6/dia_5/conteudo/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Cinzel&family=Raleway:wght@300;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
+  <link href="/style.css" rel="stylesheet">
   </head>
   <body>
     <h1 id="mySpotrybefy">✨ Trybe Tricks ✨</h1>
